--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 buildscript {
     repositories {
         jcenter()
+        maven { url "https://dl.bintray.com/stefma/maven" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.3.1'
-        classpath 'com.novoda:bintray-release:0.5.0'
+        classpath 'guru.stefma:bintray-release:0.5.0-StefMaTest'
     }
 }
 
